<resources>
    <string name="app_name">Eazy Taxi</string>
    <string name="hello_blank_fragment" />
    <string name="loading">Loading</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="enter_password">Enter Password</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next">Next</string>
    <string name="login">Login</string>
    <string name="main_wallet">Main Wallet</string>
    <string name="friend">Friend</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="deposit">Deposit</string>
    <string name="transfer">Transfer</string>
    <string name="transactions">Transactions</string>
    <string name="lastname">Lastname</string>
    <string name="personal_details">Personal Details</string>
    <string name="create_user">Create user</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="please_enter_your_last_name">Please enter your last name</string>
    <string name="please_enter_a_valid_mobile_number">Please enter a valid phone number</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_select_dob">Please select date of birth</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_do_not_match">password don\'t match</string>
    <string name="personal_info">Personal Info</string>
    <string name="password">Password</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="connection_refused">Connection refused</string>
    <string name="connection_time_out">Connection time out!</string>
    <string name="no_connection_hint">No internet found. Check your connection or try again.</string>
    <string name="untrusted_certificate">Untrusted Certificate</string>
    <string name="ssl_handshake_aborted">The Server has closed the connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="oops">Oops…!</string>
    <string name="no">No</string>
    <string name="yes_f">Yes</string>
    <string name="yes_m">Yes</string>
    <string name="menu">Menu</string>
    <string name="version">Version</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password</string>
    <string name="upload_documents_required">Upload Documents*</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="done">Done</string>
    <string name="selfie_picture">Selfie Picture*</string>
    <string name="plate_number">Plate Number*</string>
    <string name="scan_qr">Scan QR</string>
    <string name="invalid_chat_qr_code">Invalid Qr Code</string>
    <string name="map">Map</string>
    <string name="title_activity_maps_preview">MapsPreviewActivity</string>
    <string name="select_language">Select Language</string>
    <string name="english_language">English</string>
    <string name="khmer_language">ភាសាខ្មែរ</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="create_new_password">Create New Password</string>
    <string name="submit_password">Submit password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="verification">Verification</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="identity_verification">Identity Verification</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="signout">Sign Out</string>
    <string name="not_verified">Not verified</string>
    <string name="verified">Verified</string>
    <string name="history">History</string>
    <string name="withdraw">Withdraw</string>
    <string name="total_amount">Total Amount</string>
    <string name="start">Start</string>
    <string name="upload_qr">Upload QR</string>
    <string name="server_under_maintenance">Server under maintenance</string>
    <string name="know_your_customer_kyc">KNOW YOUR CUSTOMER (KYC)</string>
    <string name="kyc_description">KYC stand for Know Your Customer, in other words verify your identity</string>
    <string name="why_do_i_have_to_do_kyc">Why Do I have to do KYC?</string>
    <string name="what_is_kyc">What is KYC ?</string>
    <string name="kyc_stands_for_know_your_customer_process_of_identifying_and_verifying_identify_of_customers">KYC stands for Know Your Customer process of identifying and verifying identify of customers</string>
    <string name="resubmit">Resubmit</string>
    <string name="choose_vehicle_types">Choose Vehicle Types*</string>
    <string name="vehicle_picture">Vehicle Picture*</string>
    <string name="id_card">ID Card*</string>
    <string name="please_select_vehicle_type">Please select vehicle type</string>
    <string name="please_choose_community_taxi">Please choose community taxi</string>
    <string name="end">End</string>
    <string name="amount">Amount</string>
    <string name="remark">Remark</string>
    <string name="your_remark">Your remark</string>
    <string name="add_a_new_card_bank_account">Add a new card / bank account</string>
    <string name="select_bank">Select Bank</string>
    <string name="confirm">Confirm</string>
    <string name="withdraw_to">Withdraw to</string>
    <string name="change_card_bank_account">Change card / bank account</string>
    <string name="payment_completed">Payment completed</string>
    <string name="acleda_bank_plc">ACLEDA BANK Plc</string>
    <string name="aba_pay">ABA PAY</string>
    <string name="finish">Finish</string>
    <string name="no_data_found">No data found</string>
    <string name="distance">Distance</string>
    <string name="gps_network_not_enabled">GPS network not enabled</string>
    <string name="pending_balance">Pending Balance</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="confirm_to_sign_out">Do you want to sign out?</string>
    <string name="enter_the_6_digit_code_we_sent_you_via_mobile_number">Enter the 6 digit code we sent you via mobile number</string>
    <string name="time_countdown" translatable="false">00:00</string>
    <string name="we_have_sent_you_an_sms_with_a_code_to_your_phone_number">We have sent you an SMS with a code to your phone number</string>
    <string name="verify_otp">Verify Otp Code</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="type">Type</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="date">Date</string>
    <string name="to_bank">To Bank</string>
    <string name="you_have_insufficient_balance_in_your_wallet">You have insufficient balance in your wallet</string>
    <string name="wallet">Wallet</string>
    <string name="status">Status</string>
    <string name="enter_amount">Enter your amount</string>
    <string name="available_status">Available Status</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="alias_name">Alias Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="vehicle">Vehicle</string>
    <string name="kyc_verified">KYC Verified.</string>
    <string name="kyc_pending">KYC Pending.</string>
    <string name="chang_successfully">Change Successfully</string>
    <string name="first_name_required">First name *</string>
    <string name="last_name_required">Last name *</string>
    <string name="gender_required">Gender *</string>
    <string name="birthday_required">Birthday *</string>
    <string name="email_required">Email *</string>
    <string name="phone_number_required">Phone number *</string>
    <string name="password_required">Password *</string>
    <string name="confirm_password_required">Confirm password *</string>
    <string name="enter_your_phone_number_and_password_to_make_sure_it_s_you">Enter your phone number and password to make sure it\'s you.</string>
    <string name="ok">Ok</string>
    <string name="could_not_received">Could not received?</string>
    <string name="sms_message_has_been_send_to_your_phone_if_you_don_t_get_the_code_after_serveral_attempts_try">SMS Message has been send to your phone. If you don\'t get the code after serveral attempts try:</string>
    <string name="_1_check_if_the_funds_are_on_the_balance_of_your_phone">1. Check if the funds are on the balance of your phone.</string>
    <string name="_2_check_the_section_with_remote_sms">2. Check the section with remote SMS.</string>
    <string name="_3_make_sure_you_are_using_this_number">3. Make sure you are using this number.</string>
    <string name="acleda_bank_pls">ACLEDA BANK Plc</string>
    <string name="refused">Refused</string>
    <string name="please_enter_account_number">Please Enter Account Number</string>
    <string name="the_account_number_must_greater_then_10_digits_and_less_than_18_digits">The account number must greater than 10 digits and less than 18 digits</string>
    <string name="are_you_sure_you_want_to_remove_bank_account">Are you sure you want to remove bank account?</string>
    <string name="selfie_picture_is_required">Selfie picture is required</string>
    <string name="choose_community_required">Choose Community*</string>
    <string name="community_taxi_required">Community Taxi*</string>
    <string name="select_birthday">Select Birthday</string>
    <string name="update">Update</string>
    <string name="update_successfully">Update Successfully</string>
    <string name="select_community">Select Community</string>
    <string name="select_vehicle_type">Select vehicle type</string>
    <string name="are_you_want_to_finish_trip">Are you want to finish trip?</string>
    <string name="map_settings">Map Settings</string>
    <string name="rotate_gesture">Rotate Gesture</string>
    <string name="night_theme">Night Theme</string>
    <string name="show_traffic">Show Traffic</string>
    <string name="your_destination">Your destination</string>
    <string name="confirm_location">Confirm location</string>
    <string name="search_location">Search location</string>
    <string name="please_choose_an_address">Please choose an address</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="purchase">purchase</string>
    <string name="select_car_type">Select Car Type</string>
    <string name="trip_detail">Trip Detail</string>
    <string name="biometric_title">Biometric login to</string>
    <string name="show_qr_code_to_the_driver_to_stat_your_safety_trip">Show QR Code to the driver to stat your safety trip.</string>
    <string name="payment_complete">Payment Complete</string>
    <string name="need_access_location_setting_1">This app need to access the location for improved taxi service, pickups and dropoffs, customer support, and safety.</string>
    <string name="need_access_location_setting_2">Select "Allow While Using" in order to be able to determine your journey. Your location is only tracked during a journey initiated by you.</string>
    <string name="need_location_access">Need Location Access</string>
    <string name="turn_on_location_service_in_your_device_settings_app_info"><![CDATA[Turn on Location Service in your device Settings > App info]]></string>
</resources>