<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp">

    <FrameLayout

        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/eazy_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/code_not_receive" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                style="@style/BodyTextStyle"
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/could_not_received"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/sms_message_has_been_send_to_your_phone_if_you_don_t_get_the_code_after_serveral_attempts_try" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_check_if_the_funds_are_on_the_balance_of_your_phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_check_the_section_with_remote_sms" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_make_sure_you_are_using_this_number" />

            <FrameLayout
                android:id="@+id/containerAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/action_close"
                        style="@style/BodyTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ok"
                        android:textAllCaps="false"
                        app:cornerRadius="20dp" />

                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>