<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp">

    <FrameLayout

        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/eazy_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_baseline_location_on_24" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTv"
                style="@style/BodyTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/need_location_access"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/need_access_location_setting_1"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/need_access_location_setting_2"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/turn_on_location_service_in_your_device_settings_app_info"
                android:textAlignment="center"
                android:textSize="16sp" />


            <FrameLayout
                android:id="@+id/containerAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/action_setting"
                        style="@style/BodyTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:cornerRadius="20dp" />

                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>