<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.customer.step_booking.PaymentCompleteActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_success"
                app:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:text="@string/payment_complete"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/gray_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="65dp"
                android:gravity="center"
                android:text="@string/show_qr_code_to_the_driver_to_stat_your_safety_trip"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/im_qrcode"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                android:src="@drawable/qr_code_symbol" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:text="@string/ok"
        app:cornerRadius="7dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />


</RelativeLayout>