<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forget_password.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/appbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/logo_app_img"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/eazy_black_logo" />


            <TextView
                style="@style/BodyTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/we_have_sent_you_an_sms_with_a_code_to_your_phone_number"
                android:textAlignment="center"
                android:textSize="17sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_tf_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/BodyTextStyle"
                    android:id="@+id/phone_number_tf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:hint="@string/prompt_phone_number"
                    android:importantForAutofill="yes"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_submit"
                style="@style/BodyTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="1dp"
                android:minHeight="55dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="6dp" />


        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/loading_view"
        layout="@layout/loading_layout"
        android:visibility="gone" />


</RelativeLayout>