<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.change_password.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/appbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

            <!--new password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/BodyTextStyle"
                    android:id="@+id/new_password_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="6" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--confirm new password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_new_password_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/confirm_new_password">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/BodyTextStyle"
                    android:id="@+id/confirm_new_password_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="6" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_submit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="1dp"
                android:minHeight="60dp"
                android:text="@string/submit_password"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>


    <include
        android:id="@+id/loading_view"
        layout="@layout/loading_layout"
        android:visibility="gone" />


</RelativeLayout>