<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparent"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="10dp">

            <include layout="@layout/rectangle_ui" />

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/BodyTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/map_settings"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/action_close_img"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_close_24"
            app:tint="@color/black" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            style="@style/BodyTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/show_traffic"
            android:textSize="16sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/ThemeOverlay.App.Switch"
            android:id="@+id/show_traffic_switchmaterial"
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            style="@style/BodyTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/rotate_gesture"
            android:textSize="16sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/ThemeOverlay.App.Switch"
            android:id="@+id/rotate_gesture_switchmaterial"
            android:layout_width="50dp"
            android:layout_height="30dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            style="@style/BodyTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/night_theme"
            android:textSize="16sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/ThemeOverlay.App.Switch"
            android:id="@+id/night_theme_switchmaterial"
            android:layout_width="50dp"
            android:layout_height="30dp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

</LinearLayout>